test/tests/errors/error-ref-no-proc.sm
// true
// false
/**/
/**/

program {
    proc x(y) {
        output y;
    }

    var z = ref x;
}